--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -55,7 +55,8 @@
   },
 
   "faq": {
-    "title": "ხშირად დასმული კითხვები"
+    "title": "ხშირად დასმული კითხვები",
+    "save": "შენახვა"
   },
   "footer": {
     "faqs": "ხშირად დასმული კითხვები",
@@ -127,7 +128,8 @@
   },
   "terms": {
     "title": "წესები და პირობები",
-    "noTerms": "წესი და პირობა არ არის."
+    "noTerms": "წესი და პირობა არ არის.",
+    "save": "შენახვა"
   },
   "settings": {
     "title": "პარამეტრები",
@@ -293,6 +295,7 @@
     "notAggressive": "არა",
     "aggresiveDescription": "ეს ცხოველი აგრესიულია.",
     "status": "სტატუსი:",
+    "selectStatus": "აირჩიეთ სტატუსი",
     "editButton": "რედაქტირება",
     "cancelButton": "გაუქმება",
     "saveButton": "შენახვა",
